@startuml
skinparam classAttributeIconSize 0
class Admin{
    -role: String
    +Admin()
    +String getRole()
    +void setRole(String role)
}

class Customer{
    -address: String
    -postalCode: String
    -city: String
    ~Customer()
    +String getAddress()
    +void setAddress(String address)
    +String getPostalCode()
    +void setPostalCode(String postalCode)
    +String getCity()
    +void setCity(String city)
}

abstract User {
    #username: String
    #password: String
    #fullname: String
    #email: String
    #phoneNumber: String
    ~User()
    +String getUsername()
    +String getFullname()
    +String getEmail()
    +String getPhoneNumber()
    +void setUsername(String username)
    +String getPassword()
    +void setPassword(String password)
    +void setFullname(String fullname)
    +void setEmail(String email)
    +void setPhoneNumber(String phoneNumber)
}






abstract Product {
    #kodeProduk: String;
    #namaProduk: String;
    #hargaProduk: int;
    +Product()
    +String getKodeProduk()
    +void setKodeProduk(String kodeProduk)
    +String getNamaProduk()
    +void setNamaProduk(String namaProduk)
    +int getHargaProduk()
    +void setHargaProduk(int hargaProduk)
}

class ProductOrder {
    -pcs: int
    +ProductOrder()
    +int getPcs()
    +void setPcs(int pcs)
    +void setHargaProduk(int hargaProduk, int pcs)
}


class ProductView {
-deskripsiProduk: String
+ProductView()
+String getDeskripsiProduk()
+void setDeskripsiProduk(String deskripsiProduk)
}





class HashCollectionList<O> {
    -dataHash: Hashmap<String, 0>
    +HashCollectionList()
    +Collection values()
    +boolean exist(String datahash)
    +boolean addData(String datahash, O data)
    +void deleteData(String datahash)
    +O getData(String datahash)
    +boolean updateData(String datahash, O updatedData)
    +void resetData()
    +ArrayList convertToArrayList()

}

class HashMap {}

HashCollectionList --|> HashMap
User <|-- Customer
User <|-- Admin
Product <|-- ProductOrder
Product <|-- ProductView
 Admin --* HashCollectionList
Customer --* HashCollectionList
ProductView --* HashCollectionList
ProductOrder --* HashCollectionList
@enduml